# api/external/infra_proxy/request/automate_infra_server_users.pb.go
@@ -73,19 +73,17 @@ func (x *AutomateInfraServerUsers) GetServerId() string {
 	return ""
 }
 
-type AutomateInfraOrgUsers struct {
+type ResetInfraServerUserKeyReq struct {
 	state         protoimpl.MessageState
 	sizeCache     protoimpl.SizeCache
 	unknownFields protoimpl.UnknownFields
 
-	// Automate Infra Server ID.
-	ServerId string `protobuf:"bytes,1,opt,name=server_id,json=serverId,proto3" json:"server_id,omitempty"`
-	// Automate Infra Org ID.
-	OrgId string `protobuf:"bytes,2,opt,name=org_id,json=orgId,proto3" json:"org_id,omitempty"`
+	UserName string `protobuf:"bytes,1,opt,name=user_name,json=userName,proto3" json:"user_name,omitempty"`
+	ServerId string `protobuf:"bytes,2,opt,name=server_id,json=serverId,proto3" json:"server_id,omitempty"`
 }
 
-func (x *AutomateInfraOrgUsers) Reset() {
-	*x = AutomateInfraOrgUsers{}
+func (x *ResetInfraServerUserKeyReq) Reset() {
+	*x = ResetInfraServerUserKeyReq{}
 	if protoimpl.UnsafeEnabled {
 		mi := &file_external_infra_proxy_request_automate_infra_server_users_proto_msgTypes[1]
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -93,13 +91,13 @@ func (x *AutomateInfraOrgUsers) Reset() {
 	}
 }
 
-func (x *AutomateInfraOrgUsers) String() string {
+func (x *ResetInfraServerUserKeyReq) String() string {
 	return protoimpl.X.MessageStringOf(x)
 }
 
-func (*AutomateInfraOrgUsers) ProtoMessage() {}
+func (*ResetInfraServerUserKeyReq) ProtoMessage() {}
 
-func (x *AutomateInfraOrgUsers) ProtoReflect() protoreflect.Message {
+func (x *ResetInfraServerUserKeyReq) ProtoReflect() protoreflect.Message {
 	mi := &file_external_infra_proxy_request_automate_infra_server_users_proto_msgTypes[1]
 	if protoimpl.UnsafeEnabled && x != nil {
 		ms := protoimpl.X.MessageStateOf(protoimpl.Pointer(x))
@@ -111,21 +109,21 @@ func (x *AutomateInfraOrgUsers) ProtoReflect() protoreflect.Message {
 	return mi.MessageOf(x)
 }
 
-// Deprecated: Use AutomateInfraOrgUsers.ProtoReflect.Descriptor instead.
-func (*AutomateInfraOrgUsers) Descriptor() ([]byte, []int) {
+// Deprecated: Use ResetInfraServerUserKeyReq.ProtoReflect.Descriptor instead.
+func (*ResetInfraServerUserKeyReq) Descriptor() ([]byte, []int) {
 	return file_external_infra_proxy_request_automate_infra_server_users_proto_rawDescGZIP(), []int{1}
 }
 
-func (x *AutomateInfraOrgUsers) GetServerId() string {
+func (x *ResetInfraServerUserKeyReq) GetUserName() string {
 	if x != nil {
-		return x.ServerId
+		return x.UserName
 	}
 	return ""
 }
 
-func (x *AutomateInfraOrgUsers) GetOrgId() string {
+func (x *ResetInfraServerUserKeyReq) GetServerId() string {
 	if x != nil {
-		return x.OrgId
+		return x.ServerId
 	}
 	return ""
 }
@@ -143,16 +141,16 @@ var file_external_infra_proxy_request_automate_infra_server_users_proto_rawDesc 
 	0x61, 0x74, 0x65, 0x49, 0x6e, 0x66, 0x72, 0x61, 0x53, 0x65, 0x72, 0x76, 0x65, 0x72, 0x55, 0x73,
 	0x65, 0x72, 0x73, 0x12, 0x1b, 0x0a, 0x09, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x5f, 0x69, 0x64,
 	0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x49, 0x64,
-	0x22, 0x4b, 0x0a, 0x15, 0x41, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x65, 0x49, 0x6e, 0x66, 0x72,
-	0x61, 0x4f, 0x72, 0x67, 0x55, 0x73, 0x65, 0x72, 0x73, 0x12, 0x1b, 0x0a, 0x09, 0x73, 0x65, 0x72,
-	0x76, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x01, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08, 0x73, 0x65,
-	0x72, 0x76, 0x65, 0x72, 0x49, 0x64, 0x12, 0x15, 0x0a, 0x06, 0x6f, 0x72, 0x67, 0x5f, 0x69, 0x64,
-	0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x05, 0x6f, 0x72, 0x67, 0x49, 0x64, 0x42, 0x3b, 0x5a,
-	0x39, 0x67, 0x69, 0x74, 0x68, 0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63, 0x68, 0x65, 0x66,
-	0x2f, 0x61, 0x75, 0x74, 0x6f, 0x6d, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x65, 0x78,
-	0x74, 0x65, 0x72, 0x6e, 0x61, 0x6c, 0x2f, 0x69, 0x6e, 0x66, 0x72, 0x61, 0x5f, 0x70, 0x72, 0x6f,
-	0x78, 0x79, 0x2f, 0x72, 0x65, 0x71, 0x75, 0x65, 0x73, 0x74, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74,
-	0x6f, 0x33,
+	0x22, 0x56, 0x0a, 0x1a, 0x52, 0x65, 0x73, 0x65, 0x74, 0x49, 0x6e, 0x66, 0x72, 0x61, 0x53, 0x65,
+	0x72, 0x76, 0x65, 0x72, 0x55, 0x73, 0x65, 0x72, 0x4b, 0x65, 0x79, 0x52, 0x65, 0x71, 0x12, 0x1b,
+	0x0a, 0x09, 0x75, 0x73, 0x65, 0x72, 0x5f, 0x6e, 0x61, 0x6d, 0x65, 0x18, 0x01, 0x20, 0x01, 0x28,
+	0x09, 0x52, 0x08, 0x75, 0x73, 0x65, 0x72, 0x4e, 0x61, 0x6d, 0x65, 0x12, 0x1b, 0x0a, 0x09, 0x73,
+	0x65, 0x72, 0x76, 0x65, 0x72, 0x5f, 0x69, 0x64, 0x18, 0x02, 0x20, 0x01, 0x28, 0x09, 0x52, 0x08,
+	0x73, 0x65, 0x72, 0x76, 0x65, 0x72, 0x49, 0x64, 0x42, 0x3b, 0x5a, 0x39, 0x67, 0x69, 0x74, 0x68,
+	0x75, 0x62, 0x2e, 0x63, 0x6f, 0x6d, 0x2f, 0x63, 0x68, 0x65, 0x66, 0x2f, 0x61, 0x75, 0x74, 0x6f,
+	0x6d, 0x61, 0x74, 0x65, 0x2f, 0x61, 0x70, 0x69, 0x2f, 0x65, 0x78, 0x74, 0x65, 0x72, 0x6e, 0x61,
+	0x6c, 0x2f, 0x69, 0x6e, 0x66, 0x72, 0x61, 0x5f, 0x70, 0x72, 0x6f, 0x78, 0x79, 0x2f, 0x72, 0x65,
+	0x71, 0x75, 0x65, 0x73, 0x74, 0x62, 0x06, 0x70, 0x72, 0x6f, 0x74, 0x6f, 0x33,
 }
 
 var (
@@ -169,8 +167,8 @@ func file_external_infra_proxy_request_automate_infra_server_users_proto_rawDesc
 
 var file_external_infra_proxy_request_automate_infra_server_users_proto_msgTypes = make([]protoimpl.MessageInfo, 2)
 var file_external_infra_proxy_request_automate_infra_server_users_proto_goTypes = []interface{}{
-	(*AutomateInfraServerUsers)(nil), // 0: chef.automate.api.infra_proxy.request.AutomateInfraServerUsers
-	(*AutomateInfraOrgUsers)(nil),    // 1: chef.automate.api.infra_proxy.request.AutomateInfraOrgUsers
+	(*AutomateInfraServerUsers)(nil),   // 0: chef.automate.api.infra_proxy.request.AutomateInfraServerUsers
+	(*ResetInfraServerUserKeyReq)(nil), // 1: chef.automate.api.infra_proxy.request.ResetInfraServerUserKeyReq
 }
 var file_external_infra_proxy_request_automate_infra_server_users_proto_depIdxs = []int32{
 	0, // [0:0] is the sub-list for method output_type
@@ -199,7 +197,7 @@ func file_external_infra_proxy_request_automate_infra_server_users_proto_init() 
 			}
 		}
 		file_external_infra_proxy_request_automate_infra_server_users_proto_msgTypes[1].Exporter = func(v interface{}, i int) interface{} {
-			switch v := v.(*AutomateInfraOrgUsers); i {
+			switch v := v.(*ResetInfraServerUserKeyReq); i {
 			case 0:
 				return &v.state
 			case 1:
