# components/automate-gateway/api/infra_proxy.pb.swagger.go
@@ -2738,6 +2738,50 @@ func init() {
         ]
       }
     },
+    "/api/v0/infra/servers/{server_id}/user/{user_name}/user": {
+      "post": {
+        "operationId": "InfraProxy_ResetInfraServerUserKey",
+        "responses": {
+          "200": {
+            "description": "A successful response.",
+            "schema": {
+              "$ref": "#/definitions/chef.automate.api.infra_proxy.response.ResetInfraServerUserKeyRes"
+            }
+          },
+          "default": {
+            "description": "An unexpected error response",
+            "schema": {
+              "$ref": "#/definitions/grpc.gateway.runtime.Error"
+            }
+          }
+        },
+        "parameters": [
+          {
+            "name": "server_id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "user_name",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "$ref": "#/definitions/chef.automate.api.infra_proxy.request.ResetInfraServerUserKeyReq"
+            }
+          }
+        ],
+        "tags": [
+          "InfraProxy"
+        ]
+      }
+    },
     "/api/v0/infra/servers/{server_id}/users": {
       "post": {
         "operationId": "InfraProxy_GetServerUsersList",
@@ -3062,6 +3106,17 @@ func init() {
         "override_attributes": {
           "type": "object",
           "description": "Node override attributes JSON."
+        }
+      }
+    },
+    "chef.automate.api.infra_proxy.request.ResetInfraServerUserKeyReq": {
+      "type": "object",
+      "properties": {
+        "user_name": {
+          "type": "string"
+        },
+        "server_id": {
+          "type": "string"
         }
       }
     },
@@ -4558,6 +4613,20 @@ func init() {
         "client_key": {
           "$ref": "#/definitions/chef.automate.api.infra_proxy.response.ClientKey",
           "description": "Client key detail."
+        }
+      }
+    },
+    "chef.automate.api.infra_proxy.response.ResetInfraServerUserKeyRes": {
+      "type": "object",
+      "properties": {
+        "user_id": {
+          "type": "string"
+        },
+        "user_name": {
+          "type": "string"
+        },
+        "private_key": {
+          "type": "string"
         }
       }
     },
