# components/automate-gateway/handler/infra_proxy/automate_infra_server_users.go
@@ -88,3 +88,21 @@ func fromUpstreamAutomateInfraOrgUser(u *infra_res.AutomateInfraOrgUsersListItem
 		IsAdmin:             u.IsAdmin,
 	}
 }
+
+//ResetInfraServerUserKey: Resets infra server user key
+func (c *InfraProxyServer) ResetInfraServerUserKey(ctx context.Context, r *gwreq.ResetInfraServerUserKeyReq) (*gwres.ResetInfraServerUserKeyRes, error) {
+	req := &infra_req.ResetInfraServerUserKeyReq{
+		UserName: r.UserName,
+		ServerId: r.ServerId,
+	}
+	res, err := c.client.ResetInfraServerUserKey(ctx, req)
+	if err != nil {
+		return nil, err
+	}
+
+	return &gwres.ResetInfraServerUserKeyRes{
+		UserName:   res.UserName,
+		ServerId:   res.ServerId,
+		PrivateKey: res.PrivateKey,
+	}, nil
+}
