# components/infra-proxy-service/server/automate_infra_server_users.go
@@ -2,11 +2,16 @@ package server
 
 import (
 	"context"
+	"fmt"
 
+	secrets "github.com/chef/automate/api/external/secrets"
 	"github.com/chef/automate/api/interservice/infra_proxy/request"
 	"github.com/chef/automate/api/interservice/infra_proxy/response"
 	"github.com/chef/automate/components/infra-proxy-service/service"
 	"github.com/chef/automate/components/infra-proxy-service/storage"
+	"github.com/chef/automate/components/infra-proxy-service/validation"
+	chef "github.com/go-chef/chef"
+	"github.com/pkg/errors"
 )
 
 //GetAutomateInfraServerUsersList: Fetches the list of automate infra server users from the DB
@@ -99,4 +104,76 @@ func fromStorageToListAutomateInfraOrgUsers(ul []storage.OrgUser) []*response.Au
 	}
 
 	return tl
+}
+
+// ResetInfraServerUserKey updates the public key on the Chef Server and returns the private key
+func (s *Server) ResetInfraServerUserKey(ctx context.Context, req *request.ResetInfraServerUserKeyReq) (*response.ResetInfraServerUserKeyRes, error) {
+	err := validation.New(validation.Options{
+		Target:  "user",
+		Request: *req,
+		Rules: validation.Rules{
+			"ServerId": []string{"required"},
+			"Name":     []string{"required"},
+		},
+	}).Validate()
+
+	if err != nil {
+		return nil, err
+	}
+
+	server, err := s.service.Storage.GetServer(ctx, req.ServerId)
+	if err != nil {
+		return nil, err
+	}
+	if server.CredentialID == "" {
+		return nil, errors.New("webui key is not available with server")
+	}
+	// Get web ui key from secrets service
+	secret, err := s.service.Secrets.Read(ctx, &secrets.Id{Id: server.CredentialID})
+	if err != nil {
+		return nil, err
+	}
+	c, err := s.createChefServerClient(ctx, req.ServerId, GetAdminKeyFrom(secret), "pivotal", true)
+	if err != nil {
+		return nil, err
+	}
+
+	// Deletes the existing key
+	_, err = c.client.Users.DeleteKey(req.UserName, "default")
+	chefError, _ := chef.ChefError(err)
+	if err != nil && chefError.StatusCode() != 404 {
+		return nil, ParseAPIError(err)
+	}
+
+	// Add new key to existing client
+	body, err := chef.JSONReader(AccessKeyReq{
+		Name:           "default",
+		ExpirationDate: "infinity",
+		CreateKey:      true,
+	})
+	if err != nil {
+		return nil, ParseAPIError(err)
+	}
+
+	var chefKey chef.ChefKey
+	addReq, err := c.client.NewRequest("POST", fmt.Sprintf("users/%s/keys", req.UserName), body)
+
+	if err != nil {
+		return nil, ParseAPIError(err)
+	}
+
+	res, err := c.client.Do(addReq, &chefKey)
+	if res != nil {
+		defer res.Body.Close() //nolint:errcheck
+	}
+
+	if err != nil {
+		return nil, ParseAPIError(err)
+	}
+
+	return &response.ResetInfraServerUserKeyRes{
+		PrivateKey: chefKey.PrivateKey,
+		UserName:   req.UserName,
+		ServerId:   req.ServerId,
+	}, nil
 }
